<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        style="@style/CustomAppBar"
        android:id="@+id/app_bar"

        app:titleTextColor="@color/light_text_primary"
        app:navigationIconTint="@color/light_text_primary"
        app:title="@string/account_screen_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        style="@style/LargeTextView"
        android:id="@+id/main_title"
        android:text="@string/welcome_message"
        android:textSize="40sp"
        android:textColor="@color/dark_text_primary"

        app:layout_constraintTop_toBottomOf="@+id/app_bar"
        app:layout_constraintBottom_toTopOf="@id/register_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.textview.MaterialTextView
        style="@style/MediumTextView"
        android:text="@string/secondary_title"
        android:textColor="@color/dark_text_primary"

        app:layout_constraintTop_toBottomOf="@+id/main_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        style="@style/CustomButton"
        android:id="@+id/login_button"
        android:text="@string/login_button"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        style="@style/CustomButton"
        android:id="@+id/register_button"
        android:text="@string/register_button"


        app:layout_constraintBottom_toTopOf="@id/login_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>