<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"

    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        style="@style/CustomAppBar"
        android:id="@+id/app_bar"

        app:titleTextColor="@color/light_text_primary"
        app:navigationIconTint="@color/light_text_primary"
        app:title="@string/statistics_screen_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        style="@style/LargeTextView"
        android:id="@+id/game_statistics"
        android:text="@string/game_statistics"
        android:gravity="start"
        android:background="@color/primary"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/carousel_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintBottom_toTopOf="@id/past_responses"
        app:layout_constraintTop_toBottomOf="@+id/game_statistics"/>


    <com.google.android.material.textview.MaterialTextView
        style="@style/LargeTextView"
        android:id="@+id/past_responses"
        android:text="@string/past_responses"
        android:gravity="start"
        android:background="@color/primary"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/question_recycler"/>


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/question_recycler"

        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>