<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        style="@style/CustomAppBar"
        android:id="@+id/app_bar"

        app:titleTextColor="@color/light_text_primary"
        app:navigationIconTint="@color/light_text_primary"
        app:title="@string/hangman_screen_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/information_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/light_primary"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@id/app_bar">

        <com.google.android.material.textview.MaterialTextView
            style="@style/SmallTextView"
            android:id="@+id/current_category" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/SmallTextView"
            android:id="@+id/current_question" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/SmallTextView"
            android:id="@+id/current_type" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/hangman_image"
        android:src="@drawable/hangman_stage_1"

        app:layout_constraintTop_toBottomOf="@id/information_bar"
        app:layout_constraintBottom_toTopOf="@id/question"/>

    <com.google.android.material.button.MaterialButton
        style="@style/CustomButton"
        android:id="@+id/submit_button"
        android:text="@string/submit_button"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/LargeTextView"
        android:id="@+id/question"
        android:textColor="@color/dark_text_primary"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/information_bar"
        app:layout_constraintBottom_toTopOf="@id/radio_group" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"

        app:layout_constraintBottom_toTopOf="@id/submit_button">

        <com.google.android.material.radiobutton.MaterialRadioButton
            style="@style/CustomRadioButton"
            android:id="@+id/true_button"
            android:text="@string/true_button" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            style="@style/CustomRadioButton"
            android:id="@+id/false_button"
            android:text="@string/false_button" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>